--- a/module2/index.html
+++ b/module2/index.html
@@ -9,7 +9,7 @@
 	<body>
 
 	<h1>Our Menu</h1>
-		<section id="section1">
+		<div id="section" class="row">
 		<div id="desc1">Chicken</div>
 		<div>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec laoreet ornare magna id efficitur. Proin gravida semper dui semper semper. Fusce molestie suscipit lorem vestibulum egestas. Proin elit purus, tincidunt quis ornare eu, auctor dapibus lacus. Sed hendrerit arcu ac quam dapibus blandit. Proin ullamcorper rhoncus interdum. Donec est diam, suscipit sed odio quis, aliquet pulvinar est. Proin vel dolor elementum, ornare orci ac, accumsan nibh. Pellentesque vulputate ut lectus non maximus.
