--- a/module3/index.html
+++ b/module3/index.html
@@ -1,28 +1,97 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <title>Boostrap Starter Page</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
-  </head>
+  <title>Coursera Module 3</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+
 <body>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
 
-  <h1>Hello Coursera!</h1>
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#my-navbar-collapse" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Food, LLC</a>
+      </div>
 
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse text-center" id="my-navbar-collapse">
+        <ul class="nav navbar-nav navbar-right visible-xs" id="navbar-bg">
+          <li>
+            <a href="#desc1">Chicken</a>
+          </li>
+          <li>
+            <a href="#desc2">Beef</a>
+          </li>
+          <li>
+            <a href="#desc3">Sushi</a>
+          </li>
+        </ul>
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+  </nav>
+
+  <h1 class="text-center" id="top">Our Menu</h1>
+  <div id="main-text" class="row">
+    <div class="col-md-4 col-sm-6 col-xs-12">
+      <div id="desc1">
+        <h3 class="text-center">Chicken</h3>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec laoreet ornare magna id efficitur. Proin gravida semper dui semper semper. Fusce molestie suscipit lorem vestibulum egestas. Proin elit purus, tincidunt quis ornare eu, auctor dapibus lacus.
+        Sed hendrerit arcu ac quam dapibus blandit. Proin ullamcorper rhoncus interdum. Donec est diam, suscipit sed odio quis, aliquet pulvinar est. Proin vel dolor elementum, ornare orci ac, accumsan nibh. Pellentesque vulputate ut lectus non maximus.
+        Vestibulum commodo nunc iaculis imperdiet aliquet. Fusce mattis bibendum tellus, vitae vulputate erat scelerisque sed. Morbi diam purus, scelerisque a molestie nec, consequat a nunc. Aliquam pulvinar neque non tempus pellentesque. Phasellus sollicitudin,
+        orci eget dapibus mollis, eros erat varius tellus, vitae iaculis libero justo vel erat. Sed ut pulvinar eros, et congue diam. Proin aliquam in ipsum et consectetur. In eu facilisis tortor. Class aptent taciti sociosqu ad litora torquent per conubia
+        nostra, per inceptos himenaeos. Mauris dictum euismod massa, quis suscipit nunc condimentum lobortis. Aenean at purus finibus, tincidunt nibh id, maximus quam. Vestibulum libero augue, tempus sed imperdiet non, vestibulum non ex.
+        <div><a href="#top"><span>Back to Top</span></a></div>
+      </div>
+    </div>
+    <div class="col-md-4 col-sm-6 col-xs-12">
+      <div id="desc2">
+        <h3 class="text-center">Beef</h3>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec laoreet ornare magna id efficitur. Proin gravida semper dui semper semper. Fusce molestie suscipit lorem vestibulum egestas. Proin elit purus, tincidunt quis ornare eu, auctor dapibus lacus.
+        Sed hendrerit arcu ac quam dapibus blandit. Proin ullamcorper rhoncus interdum. Donec est diam, suscipit sed odio quis, aliquet pulvinar est. Proin vel dolor elementum, ornare orci ac, accumsan nibh. Pellentesque vulputate ut lectus non maximus.
+        Vestibulum commodo nunc iaculis imperdiet aliquet. Fusce mattis bibendum tellus, vitae vulputate erat scelerisque sed. Morbi diam purus, scelerisque a molestie nec, consequat a nunc. Aliquam pulvinar neque non tempus pellentesque. Phasellus sollicitudin,
+        orci eget dapibus mollis, eros erat varius tellus, vitae iaculis libero justo vel erat. Sed ut pulvinar eros, et congue diam. Proin aliquam in ipsum et consectetur. In eu facilisis tortor. Class aptent taciti sociosqu ad litora torquent per conubia
+        nostra, per inceptos himenaeos. Mauris dictum euismod massa, quis suscipit nunc condimentum lobortis. Aenean at purus finibus, tincidunt nibh id, maximus quam. Vestibulum libero augue, tempus sed imperdiet non, vestibulum non ex.
+        <div><a href="#top"><span>Back to Top</span></a></div>
+      </div>
+    </div>
+    <div class="col-md-4 col-sm-12 col-xs-12">
+      <div id="desc3">
+        <h3 class="text-center">Sushi</h3>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec laoreet ornare magna id efficitur. Proin gravida semper dui semper semper. Fusce molestie suscipit lorem vestibulum egestas. Proin elit purus, tincidunt quis ornare eu, auctor dapibus lacus.
+        Sed hendrerit arcu ac quam dapibus blandit. Proin ullamcorper rhoncus interdum. Donec est diam, suscipit sed odio quis, aliquet pulvinar est. Proin vel dolor elementum, ornare orci ac, accumsan nibh. Pellentesque vulputate ut lectus non maximus.
+        Vestibulum commodo nunc iaculis imperdiet aliquet. Fusce mattis bibendum tellus, vitae vulputate erat scelerisque sed. Morbi diam purus, scelerisque a molestie nec, consequat a nunc. Aliquam pulvinar neque non tempus pellentesque. Phasellus sollicitudin,
+        orci eget dapibus mollis, eros erat varius tellus, vitae iaculis libero justo vel erat. Sed ut pulvinar eros, et congue diam. Proin aliquam in ipsum et consectetur. In eu facilisis tortor. Class aptent taciti sociosqu ad litora torquent per conubia
+        nostra, per inceptos himenaeos. Mauris dictum euismod massa, quis suscipit nunc condimentum lobortis. Aenean at purus finibus, tincidunt nibh id, maximus quam. Vestibulum libero augue, tempus sed imperdiet non, vestibulum non ex.
+        <div><a href="#top"><span>Back to Top</span></a></div>
+      </div>
+    </div>
+  </div>
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-1.11.3.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/script.js"></script>
 </body>
+
 </html>
